--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,6 +1,15 @@
 @charset 'UTF-8';
 
-@font-face{font-family:'FontAwesome';src:url('/assets/font/fontawesome-webfont.eot?v=4.0.1');src:url('/assets/font/fontawesome-webfont.eot?#iefix&v=4.0.1') format('embedded-opentype'),url('/assets/font/fontawesome-webfont.woff?v=4.0.1') format('woff'),url('/assets/font/fontawesome-webfont.ttf?v=4.0.1') format('truetype'),url('/assets/font/fontawesome-webfont.svg?v=4.0.1#fontawesomeregular') format('svg');font-weight:normal;font-style:normal}
+@font-face{
+		font-family: 'FontAwesome';
+		src: url('/assets/fontawesome-webfont.eot?v=4.0.1');
+		src: url('/assets/fontawesome-webfont.eot?#iefix&v=4.0.1') format('embedded-opentype'),
+			   url('/assets/fontawesome-webfont.woff?v=4.0.1') format('woff'),
+			   url('/assets/fontawesome-webfont.ttf?v=4.0.1') format('truetype'),
+			   url('/assets/fontawesome-webfont.svg?v=4.0.1#fontawesomeregular') format('svg');
+		font-weight:normal;
+		font-style:normal
+  }
 
 /*
 	Dopetrope 2.5 by HTML5 UP
