--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <!--[if lte IE 8]><script src="/assets/html5shiv.js"></script><link rel="stylesheet" href="/assets/ie8.css" /><![endif]-->
 </head>
 <body class="homepage">
 
