--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -47,7 +47,10 @@
 							<!-- Banner -->
 								<section id="banner">
 									<a href="http://facebook.com/DreametryDoodle">
-										<span class="image image-full"><img src="/assets/pic01.jpg" alt="" /></span>
+										<span class="image image-full">
+											<%= image_tag("pic01.jpg")%>
+											<!-- <img src="/assets/pic01.jpg" alt="" /> -->
+										</span>
 										<header>
 											<h2>Howdy. This is Dopetrope.</h2>
 											<span class="byline">A responsive template by HTML5 UP</span>
@@ -122,7 +125,9 @@
 										<div class="row">
 											<div class="4u">
 												<section class="box">
-													<a href="http://facebook.com/DreametryDoodle" class="image image-full"><img src="/assets/pic02.jpg" alt="" /></a>
+													<a href="http://facebook.com/DreametryDoodle" class="image image-full">
+														<%= image_tag("pic02.jpg") %>
+														<!-- <img src="/assets/pic02.jpg" alt="" /> --></a>
 													<header>
 														<h3>Ipsum feugiat et dolor</h3>
 													</header>
@@ -134,7 +139,9 @@
 											</div>
 											<div class="4u">
 												<section class="box">
-													<a href="http://facebook.com/DreametryDoodle" class="image image-full"><img src="/assets/pic03.jpg" alt="" /></a>
+													<a href="http://facebook.com/DreametryDoodle" class="image image-full">
+														<%= image_tag("pic03.jpg") %>
+														<!-- <img src="/assets/pic03.jpg" alt="" /> --></a>
 													<header>
 														<h3>Sed etiam lorem nulla</h3>
 													</header>
@@ -146,7 +153,9 @@
 											</div>
 											<div class="4u">
 												<section class="box">
-													<a href="http://facebook.com/DreametryDoodle" class="image image-full"><img src="/assets/pic04.jpg" alt="" /></a>
+													<a href="http://facebook.com/DreametryDoodle" class="image image-full">
+														<%= image_tag("pic04.jpg") %>
+														<!-- <img src="/assets/pic04.jpg" alt="" /> --></a>
 													<header>
 														<h3>Consequat et tempus</h3>
 													</header>
@@ -160,7 +169,9 @@
 										<div class="row">
 											<div class="4u">
 												<section class="box">
-													<a href="http://facebook.com/DreametryDoodle" class="image image-full"><img src="/assets/pic05.jpg" alt="" /></a>
+													<a href="http://facebook.com/DreametryDoodle" class="image image-full">
+														<%= image_tag("pic05.jpg") %>
+														<!-- <img src="/assets/pic05.jpg" alt="" /> --></a>
 													<header>
 														<h3>Blandit sed adipiscing</h3>
 													</header>
@@ -172,7 +183,9 @@
 											</div>
 											<div class="4u">
 												<section class="box">
-													<a href="http://facebook.com/DreametryDoodle" class="image image-full"><img src="/assets/pic06.jpg" alt="" /></a>
+													<a href="http://facebook.com/DreametryDoodle" class="image image-full">
+														<%= image_tag("pic06.jpg") %>
+														<!-- <img src="/assets/pic06.jpg" alt="" /> --></a>
 													<header>
 														<h3>Etiam nisl consequat</h3>
 													</header>
@@ -184,7 +197,9 @@
 											</div>
 											<div class="4u">
 												<section class="box">
-													<a href="http://facebook.com/DreametryDoodle" class="image image-full"><img src="/assets/pic07.jpg" alt="" /></a>
+													<a href="http://facebook.com/DreametryDoodle" class="image image-full">
+														<%= image_tag("pic07.jpg") %>
+														<!-- <img src="/assets/pic07.jpg" alt="" /> --></a>
 													<header>
 														<h3>Dolore nisl feugiat</h3>
 													</header>
