--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -266,7 +266,9 @@
 									<header>
 										<h2>What's this all about?</h2>
 									</header>
-									<a href="http://facebook.com/DreametryDoodle" class="image image-full"><img src="/assets/pic10.jpg" alt="" /></a>
+									<a href="http://facebook.com/DreametryDoodle" class="image image-full">
+										<%= image_tag("pic10.jpg") %>
+										<!-- <img src="/assets/pic10.jpg" alt="" /> --></a>
 									<p>
 										This is <a href="http://html5up.net/dopetrope/">Dopetrope</a> a free, fully responsive HTML5 site template by 
 										<a href="http://n33.co">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a> It's released for free under
