refs to changes header link

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,32 +8,17 @@
 								<section id="header">
 									
 									<!-- Logo -->
-										<h1><a href="#">Dopetrope</a></h1>
+										<h1><a href="#">Gethired</a></h1>
 									
 									<!-- Nav -->
 										<nav id="nav" style='display:block;'>
 											<ul>
-												<li class="current_page_item"><a href="index.html">Home</a></li>
-												<li>
-													<a href="">Dropdown</a>
-													<ul>
-														<li><a href="#">Lorem ipsum dolor</a></li>
-														<li><a href="#">Magna phasellus</a></li>
-														<li><a href="#">Etiam dolore nisl</a></li>
-														<li>
-															<a href="">Phasellus consequat</a>
-															<ul>
-																<li><a href="#">Magna phasellus</a></li>
-																<li><a href="#">Etiam dolore nisl</a></li>
-																<li><a href="#">Veroeros feugiat</a></li>
-															</ul>
-														</li>
-														<li><a href="#">Veroeros feugiat</a></li>
-													</ul>
-												</li>
-												<li><a href="right-sidebar.html">Right Sidebar</a></li>
-												<li><a href="left-sidebar.html">Left Sidebar</a></li>
-												<li><a href="no-sidebar.html">No Sidebar</a></li>
+												<li class="current_page_item"><a href="#">HOME</a></li>
+												<li><a href="">All RESUMES</a></li>
+												<li><a href="#">WHY GETHIRED?</a></li>
+												<li><a href="#">TESTIMONIALS</a></li>
+												<li><a href="#">CONTACT</a></li>
+												<li><a href="#">BLOG</a></li>
 											</ul>
 										</nav>
 
