--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,7 +13,7 @@
 									<!-- Nav -->
 										<nav id="nav" style='display:block;'>
 											<ul>
-												<li class="current_page_item"><a href="#">HOME</a></li>
+												<li class="current_page_item"><a href="/">HOME</a></li>
 												<li><a href="">All RESUMES</a></li>
 												<li><a href="#">WHY GETHIRED?</a></li>
 												<li><a href="#">TESTIMONIALS</a></li>
@@ -31,7 +31,7 @@
 
 							<!-- Banner -->
 								<section id="banner">
-									<a href="http://facebook.com/DreametryDoodle">
+									<a href="#">
 										<span class="image image-full">
 											<%= image_tag("pic01.jpg")%>
 											<!-- <img src="/assets/pic01.jpg" alt="" /> -->
@@ -114,7 +114,7 @@
 														<%= image_tag("pic02.jpg") %>
 														<!-- <img src="/assets/pic02.jpg" alt="" /> --></a>
 													<header>
-														<h3>Ipsum feugiat et dolor</h3>
+														<h3>ALL Resumes</h3>
 													</header>
 													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
 													<footer>
@@ -128,7 +128,7 @@
 														<%= image_tag("pic03.jpg") %>
 														<!-- <img src="/assets/pic03.jpg" alt="" /> --></a>
 													<header>
-														<h3>Sed etiam lorem nulla</h3>
+														<h3>Best Sellers</h3>
 													</header>
 													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
 													<footer>
@@ -142,51 +142,7 @@
 														<%= image_tag("pic04.jpg") %>
 														<!-- <img src="/assets/pic04.jpg" alt="" /> --></a>
 													<header>
-														<h3>Consequat et tempus</h3>
-													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-													<footer>
-														<a href="#" class="button alt">Find out more</a>
-													</footer>
-												</section>
-											</div>
-										</div>
-										<div class="row">
-											<div class="4u">
-												<section class="box">
-													<a href="http://facebook.com/DreametryDoodle" class="image image-full">
-														<%= image_tag("pic05.jpg") %>
-														<!-- <img src="/assets/pic05.jpg" alt="" /> --></a>
-													<header>
-														<h3>Blandit sed adipiscing</h3>
-													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-													<footer>
-														<a href="#" class="button alt">Find out more</a>
-													</footer>
-												</section>
-											</div>
-											<div class="4u">
-												<section class="box">
-													<a href="http://facebook.com/DreametryDoodle" class="image image-full">
-														<%= image_tag("pic06.jpg") %>
-														<!-- <img src="/assets/pic06.jpg" alt="" /> --></a>
-													<header>
-														<h3>Etiam nisl consequat</h3>
-													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-													<footer>
-														<a href="#" class="button alt">Find out more</a>
-													</footer>
-												</section>
-											</div>
-											<div class="4u">
-												<section class="box">
-													<a href="http://facebook.com/DreametryDoodle" class="image image-full">
-														<%= image_tag("pic07.jpg") %>
-														<!-- <img src="/assets/pic07.jpg" alt="" /> --></a>
-													<header>
-														<h3>Dolore nisl feugiat</h3>
+														<h3>New Resumes</h3>
 													</header>
 													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
 													<footer>
@@ -198,6 +154,54 @@
 									</div>
 								</section>
 
+						</div>
+					</div>
+					<div class="row">
+						<div class="12u">
+
+							<!-- Blog -->
+								<section>
+									<header class="major">
+										<h2>The Blog</h2>
+									</header>
+									<div>
+										<div class="row">
+											<div class="6u">
+												<section class="box">
+													<a href="#" class="image image-full">
+														<%= image_tag('pic08.jpg')%>
+														<!-- <img src="images/pic08.jpg" alt="" /> --></a>
+													<header>
+														<h3>Magna tempus consequat lorem</h3>
+														<span class="byline">Posted 45 minutes ago</span>
+													</header>
+													<p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit  adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
+													<footer class="actions">
+														<a href="#" class="button fa fa-file-text">Continue Reading</a>
+														<a href="#" class="button alt fa fa-comment">33 comments</a>
+													</footer>
+												</section>
+											</div>
+											<div class="6u">
+												<section class="box">
+													<a href="#" class="image image-full">
+                            <%= image_tag('pic09.jpg')%>
+														<!-- <img src="images/pic09.jpg" alt="" /> --></a>
+													<header>
+														<h3>Aptent veroeros et aliquam</h3>
+														<span class="byline">Posted 45 minutes ago</span>
+													</header>
+													<p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit  adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
+													<footer class="actions">
+														<a href="#" class="button fa fa-file-text">Continue Reading</a>
+														<a href="#" class="button alt fa fa-comment">33 comments</a>
+													</footer>
+												</section>
+											</div>
+										</div>
+									</div>
+								</section>
+							
 						</div>
 					</div>
 				</div>
