refs to fix blog redirection

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -18,7 +18,7 @@
 												<li><a href="#">WHY GETHIRED?</a></li>
 												<li><a href="#">TESTIMONIALS</a></li>
 												<li><a href="#">CONTACT</a></li>
-												<li><a href="#">BLOG</a></li>
+												<li><a href="/blog/">BLOG</a></li>
 											</ul>
 										</nav>
 
