refs to changes for tweet feeds

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -470,6 +470,8 @@
 			ul.social li a.fa-tumblr:hover		{ background: #3b5671; }
 			ul.social li a.fa-google-plus		{ background: #da2713; }
 			ul.social li a.fa-google-plus:hover	{ background: #ea3723; }
+			ul.social li a.fa-pinterest		    { background: #da2713; }
+			ul.social li a.fa-pinterest:hover	{ background: #ea3723; }
 
 	/* Pennant */
 
