refs to add template settings for admin

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -94,9 +94,7 @@
 							<li>
 								<h3>Address</h3>
 								<p>
-									Untitled Incorporated<br />
-									1234 Somewhere Road Suite #5432<br />
-									Nashville, TN 00000-0000
+									Huntington, VT
 								</p>
 							</li>
 							<li>
@@ -105,7 +103,7 @@
 							</li>
 							<li>
 								<h3>Phone</h3>
-								<p>(800) 000-0000</p>
+								<p>(802) 662-2082</p>
 							</li>
 						</ul>
 					</section>
@@ -129,3 +127,14 @@
 		</section>
 	
 </div>
+
+<!-- AddThis Button BEGIN -->
+<!-- <div class="addthis_toolbox addthis_default_style ">
+<a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
+<a class="addthis_button_tweet"></a>
+<a class="addthis_button_pinterest_pinit" pi:pinit:layout="horizontal"></a>
+<a class="addthis_counter addthis_pill_style"></a>
+</div> -->
+<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52d838b82c1f7be5"></script>
+<!-- AddThis Button END -->
