--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
 									<li><a href="/gethired-resumes">All RESUMES</a></li>
 									<li><a href="#">WHY GETHIRED?</a></li>
 									<li><a href="#">TESTIMONIALS</a></li>
-									<li><a href="#">CONTACT</a></li>
+									<li><a href="/contact">CONTACT</a></li>
 									<li><a href="/blog/">BLOG</a></li>
 								</ul>
 							</nav>
