refs to minor changes for template

--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -19,7 +19,7 @@
 											<header>
 												<h3><%= template.name %></h3>
 											</header>
-											<p><%=template.short_desc%></p>
+											<p><%=template.short_description%></p>
 											<p>
 												<div class="addthis_toolbox addthis_default_style ">
 													<a class="addthis_button_pinterest_pinit" pi:pinit:layout="horizontal"></a>
