refs to changes for templates

--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -9,12 +9,12 @@
 							<h2>Resumes</h2>
 						</header>
 						<div>
-							<% @template.each do |template| %>
-								<div class="row">
+							<div class="row">
+								<% @template.each_with_index do |template,index| %>
 									<div class="4u">
 										<section class="box">
 											<a href="#" class="image image-full">
-												<%= image_tag template.main_image %>
+												<%= image_tag template.main_image(:medium),:width=>'373',:height=>'232'%>
 												<!-- <img src="/assets/pic02.jpg" alt="" /> --></a>
 											<header>
 												<h3><%= template.name %></h3>
@@ -27,9 +27,11 @@
 											</p>
 										</section>
 									</div>
-								<%end%>
+								<%end%>	
 							</div>
-						</div>
+					  </div>
+						
+						
 					</section>
 
 			</div>
