refs to changes for show price on templates

--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -21,6 +21,7 @@
 											</header>
 											<p><%=template.short_description%></p>
 											<p>
+												<%='$' +''+ template.price.to_s %>
 												<div class="addthis_toolbox addthis_default_style ">
 													<a class="addthis_button_pinterest_pinit" pi:pinit:layout="horizontal"></a>
 												</div> 
