--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -55,7 +55,7 @@
 															</li>
 															<li>
 																<h3>Mail</h3>
-																<p><a href="#">someone@untitled.tld</a></p>
+																<p><a href="#"> support@gethired.io</a></p>
 															</li>
 															<li>
 																<h3>Phone</h3>
