--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -99,7 +99,7 @@
 							</li>
 							<li>
 								<h3>Mail</h3>
-								<p><a href="#"> support@gethired.io</a></p>
+								<p><a href="mailto:support@gethired.io"> support@gethired.io</a></p>
 							</li>
 							<li>
 								<h3>Phone</h3>
