refs to changes for template details

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
 							<nav id="nav" style='display:block;'>
 								<ul>
 									<li class="current_page_item"><a href="/">HOME</a></li>
-									<li><a href="/gethired-resumes">All RESUMES</a></li>
+									<li><a href="/templates">All RESUMES</a></li>
 									<li><a href="#">WHY GETHIRED?</a></li>
 									<li><a href="#">TESTIMONIALS</a></li>
 									<li><a href="/contact">CONTACT</a></li>
