--- a/app/views/templates/show.html.erb
+++ b/app/views/templates/show.html.erb
@@ -31,20 +31,21 @@
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="addthis_toolbox addthis_default_style ">
+              <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
               <a class="addthis_button_tweet"></a>
               <a class="addthis_button_pinterest_pinit" pi:pinit:layout="horizontal"></a>
-              <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
+              
             </div>
           </div>
         </div>
         <div class="panel panel-default">
           <div class="panel-body">
-            <div>price: <%= '$'+''+@template.price.to_s %></div>
-            <%=select_tag 'completion-day', options_for_select(@completion_day.collect{ |u| [(u.title+' ($'+u.price.to_s + ')'), u.id] })
+            <div>price: $<span id='price'><%=@template.price.to_s %></span></div>
+            <%=select_tag 'completion-day', options_for_select(@completion_day.collect{ |u| [(u.title+' ($'+u.price.to_s + ')'), u.price] })
             %>
-            <%=select_tag 'completion-day', options_for_select(@pages.collect{ |u| [(u.title+' ($'+u.price.to_s + ')'), u.id] })
+            <%=select_tag 'pages', options_for_select(@pages.collect{ |u| [(u.title+' ($'+u.price.to_s + ')'), u.price] })
             %>
-            <%=select_tag 'completion-day', options_for_select(@colors.collect{ |u| [(u.title+' ($'+u.price.to_s + ')'), u.id] })
+            <%=select_tag 'colors', options_for_select(@colors.collect{ |u| [(u.title+' ($'+u.price.to_s + ')'), u.price] })
             %>
           </div>
         </div>
@@ -64,9 +65,10 @@
                 </div>
                 <div>
                   <div class="addthis_toolbox addthis_default_style ">
+                    <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
                     <a class="addthis_button_tweet"></a>
                     <a class="addthis_button_pinterest_pinit" pi:pinit:layout="horizontal"></a>
-                    <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
+                    
                   </div>
                 </div> 
                 <div>
@@ -96,8 +98,16 @@
               
               <div>Postal/ZIP Code</div>
                 <%= text_field_tag 'zipcode' %>
-            
+              
+              <div>Contry</div>
+                <%=country_select :country_code, { prompt: 'Please select a country'}%>
+              <div>State / Province</div>
+                <%= text_field_tag 'state' %>
+              <div>Phone</div>
+                <%= text_field_tag 'phone' %>
+
               <%= link_to_modal "back", "#checkout", :class=>"button" %>
+              <%= link_to_modal "next", "#checkout", :class=>"button" %>
             </div>
 
             <%= link_to_modal "Checkout", "#checkout", :class=>"button" %>
@@ -107,3 +117,22 @@
     </div>
   </div>
 </div>
+<script>
+var actual_price = parseInt("<%= @template.price %>");
+var sum = actual_price;
+$("#completion-day").click(function(){
+  var value = parseInt($( "#completion-day option:selected").val()) + parseInt($( "#pages option:selected").val()) + parseInt($( "#colors option:selected").val());
+  var price = value + sum;
+  $("#price").html(price);
+})
+$("#pages").click(function(){
+  var value = parseInt($( "#completion-day option:selected").val()) + parseInt($( "#pages option:selected").val()) + parseInt($( "#colors option:selected").val());
+  var price = value + sum;
+  $("#price").html(price);
+})
+$("#colors").click(function(){
+  var value = parseInt($( "#completion-day option:selected").val()) + parseInt($( "#pages option:selected").val()) + parseInt($( "#colors option:selected").val());
+  var price = value + sum;
+  $("#price").html(price);
+})
+</script>
