--- a/app/views/templates/show.html.erb
+++ b/app/views/templates/show.html.erb
@@ -41,12 +41,12 @@
         <div class="panel panel-default">
           <div class="panel-body">
             <div>price: $<span id='price'><%=@template.price.to_s %></span></div>
-            <%=select_tag 'completion-day', options_for_select(@completion_day.collect{ |u| [(u.title+' ($'+u.price.to_s + ')'), u.price] })
-            %>
-            <%=select_tag 'pages', options_for_select(@pages.collect{ |u| [(u.title+' ($'+u.price.to_s + ')'), u.price] })
-            %>
-            <%=select_tag 'colors', options_for_select(@colors.collect{ |u| [(u.title+' ($'+u.price.to_s + ')'), u.price] })
-            %>
+              <%=select_tag 'completion-day', options_for_select(@completion_day.collect{ |u| [(u.title+' ($'+u.price.to_s + ')'), u.price.to_s+'-'+u.id.to_s] })
+              %>
+              <%=select_tag 'pages', options_for_select(@pages.collect{ |u| [(u.title+' ($'+u.price.to_s + ')'), u.price.to_s+'-'+u.id.to_s] })
+              %>
+              <%=select_tag 'colors', options_for_select(@colors.collect{ |u| [(u.title+' ($'+u.price.to_s + ')'), u.price.to_s+'-'+u.id.to_s] })
+              %>
           </div>
         </div>
       </div>
@@ -55,8 +55,9 @@
           <div class="panel-body">
             <div id="checkout"style="display: none; ">
               <p>
+                <span class='error-message'></span>
                 <div>Email Address</div>
-                <%= text_field_tag 'email' %>
+                <%= text_field_tag 'email_address' %>
                 <div>
                   <%= radio_button_tag(:cc, "bitcoin") %>
                   <%= label_tag(:cc_bitcoin, "Bitcoin") %><br/>
@@ -67,45 +68,17 @@
                   <div class="addthis_toolbox addthis_default_style ">
                     <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
                     <a class="addthis_button_tweet"></a>
-                    <a class="addthis_button_pinterest_pinit" pi:pinit:layout="horizontal"></a>
-                    
                   </div>
                 </div> 
                 <div>
                   <%= link_to 'Cancel', nil, :rel => "modal:close" ,:class=>"button" %>
-                  <%= link_to_modal 'Next','#cc-card',:class=>"button"%>
+                  <%= link_to_modal 'Next',new_charge_path,:class=>"button checkout",:id=>"card"%>
+                  <%= link_to 'Next', nil, :rel => "modal:close" ,:class=>"button",:id=>'bitcoin' %>
                 </div>
               </p>
             </div>
             <div id="cc-card"style="display: none; ">
-              <div>First name</div>
-                <%= text_field_tag 'first_name' %>
               
-              <div>Last name</div>
-                <%= text_field_tag 'last_name' %>
-              
-              <div>Company</div>
-                <%= text_field_tag 'company' %>
-                
-              <div>Address</div>
-                <%= text_field_tag 'address' %>
-              
-              <div>Address2</div>
-                <%= text_field_tag 'address2' %>
-                
-              <div>City</div>
-                <%= text_field_tag 'city' %>
-              
-              <div>Postal/ZIP Code</div>
-                <%= text_field_tag 'zipcode' %>
-              
-              <div>Contry</div>
-                <%=country_select :country_code, { prompt: 'Please select a country'}%>
-              <div>State / Province</div>
-                <%= text_field_tag 'state' %>
-              <div>Phone</div>
-                <%= text_field_tag 'phone' %>
-
               <%= link_to_modal "back", "#checkout", :class=>"button" %>
               <%= link_to_modal "next", "#checkout", :class=>"button" %>
             </div>
@@ -118,21 +91,52 @@
   </div>
 </div>
 <script>
-var actual_price = parseInt("<%= @template.price %>");
-var sum = actual_price;
+$("#card").hide();
+$("#bitcoin").hide();
+var sum = parseInt("<%= @template.price %>");
 $("#completion-day").click(function(){
+  
   var value = parseInt($( "#completion-day option:selected").val()) + parseInt($( "#pages option:selected").val()) + parseInt($( "#colors option:selected").val());
   var price = value + sum;
   $("#price").html(price);
+  $("#selected_value").submit();
 })
 $("#pages").click(function(){
+
   var value = parseInt($( "#completion-day option:selected").val()) + parseInt($( "#pages option:selected").val()) + parseInt($( "#colors option:selected").val());
   var price = value + sum;
   $("#price").html(price);
+  $("#selected_value").submit();
 })
 $("#colors").click(function(){
   var value = parseInt($( "#completion-day option:selected").val()) + parseInt($( "#pages option:selected").val()) + parseInt($( "#colors option:selected").val());
   var price = value + sum;
   $("#price").html(price);
+  $("#selected_value").submit();
 })
+
+$("#cc_bitcoin").click(function(){
+  $("#card").hide();
+  $("#bitcoin").show();
+});
+$("#cc_card").click(function(){
+  $("#bitcoin").hide();
+  $("#card").show();
+});
+
+$(".checkout").click(function(){
+  var email_address = $('#email_address').val();
+  if(email_address != 0){
+    var completion = $( "#completion-day option:selected").val();
+    var page = $( "#pages option:selected").val();
+    var color = $( "#colors option:selected").val();
+    var template = parseInt("<%= @template.id %>");
+    
+    $.get( "<%=set_session_templates_path%>", { completion_id:completion , page_id: page , color_id: color, template_id : template ,email: email_address} );
+  }
+  else{
+    $('.error-message').text("Email Address can't be blank");
+    return false;
+  }
+});
 </script>
