refs to chnges for price

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,8 @@
 									<li><a href="/templates">All RESUMES</a></li>
 									<li><a href="#">WHY GETHIRED?</a></li>
 									<li><a href="#">TESTIMONIALS</a></li>
-									<li><a href="/contact">CONTACT</a></li>
+									<li><a href="http://support.gethired.io" target='_blank'>FAQ</a></li>
+									<li><a href="http://support.gethired.io" target='_blank'>CONTACT</a></li>
 									<li><a href="/blog/">BLOG</a></li>
 								</ul>
 							</nav>
