--- a/app/views/templates/show.html.erb
+++ b/app/views/templates/show.html.erb
@@ -95,7 +95,6 @@ $("#card").hide();
 $("#bitcoin").hide();
 var sum = parseInt("<%= @template.price %>");
 $("#completion-day").click(function(){
-  
   var value = parseInt($( "#completion-day option:selected").val()) + parseInt($( "#pages option:selected").val()) + parseInt($( "#colors option:selected").val());
   var price = value + sum;
   $("#price").html(price);
@@ -137,8 +136,16 @@ $(".checkout").click(function(){
     var page = $( "#pages option:selected").val();
     var color = $( "#colors option:selected").val();
     var template = parseInt("<%= @template.id %>");
-    
-    $.get( "<%=set_session_templates_path%>", { completion_id:completion , page_id: page , color_id: color, template_id : template ,email: email_address} );
+    $.ajax({
+      url: "<%=set_session_templates_path%>",
+      type: 'post',
+      dataType: 'json',
+      data:{completion_id:completion , page_id: page , color_id: color, template_id : template ,email: email_address},
+      beforeSend: function(xhr) {
+      xhr.setRequestHeader('X-CSRF-Token', $('meta[name="csrf-token"]').attr('content'));
+      }
+    });  
+    // $.get( "<%=set_session_templates_path%>", { completion_id:completion , page_id: page , color_id: color, template_id : template ,email: email_address} );
   }
 
 });
