--- a/app/views/charges/index.html.erb
+++ b/app/views/charges/index.html.erb
@@ -1,1 +1,34 @@
-Thanks
+<div id="main-wrapper">
+	<div class="container">
+		<div class="row">
+			<div class="12u">
+				<!-- Portfolio -->
+					<section>
+						<header class="major">
+							<h2>Upload your resume</h2>
+						</header>
+						<div>
+							<div class="row">
+								<%= form_for(@user,:url=>upload_templates_path, :html => { :multipart => true }) do |f| %>
+									<p>
+									  <b> Attachment :</b>
+									  <%= f.file_field :document %>
+									</p>
+								  <p>
+									  <%= f.submit 'submit' %>
+									</p>
+								<%end%>
+							</div>
+					  </div>
+						
+						
+					</section>
+
+			</div>
+		</div>
+	</div>
+</div>
+
+<script>
+
+</script>
