refs to changes for add image on template details page

--- a/app/views/templates/show.html.erb
+++ b/app/views/templates/show.html.erb
@@ -7,7 +7,7 @@
         <div class="panel panel-default">
           <div class="panel-body">
             <center>
-              <img src="https://s3.amazonaws.com/media.jetstrap.com/Sw03DegMTxCOQpLhNvAp_coralsea_resume_small.png">
+              <%= image_tag @template.main_image.url(:medium) %>
             </center>
           </div>
         </div>
