refs to changes for orders

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
 				<!-- Header -->
 					<section id="header">
 						<!-- Logo -->
-							<h1><a href="#">Gethired</a></h1>
+							<h1><%= link_to 'Gethired',root_path%></h1>
 						<!-- Nav -->
 							<nav id="nav" style='display:block;'>
 								<ul>
