--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -132,38 +132,24 @@
 									</header>
 									<div>
 										<div class="row">
-											<div class="6u">
-												<section class="box">
-													<a href="#" class="image image-full">
-														<%= image_tag('pic08.jpg')%>
-														<!-- <img src="images/pic08.jpg" alt="" /> --></a>
-													<header>
-														<h3>Magna tempus consequat lorem</h3>
-														<span class="byline">Posted 45 minutes ago</span>
-													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit  adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
-													<footer class="actions">
-														<a href="#" class="button fa fa-file-text">Continue Reading</a>
-														<a href="#" class="button alt fa fa-comment">33 comments</a>
-													</footer>
-												</section>
-											</div>
-											<div class="6u">
-												<section class="box">
-													<a href="#" class="image image-full">
-                            <%= image_tag('pic09.jpg')%>
-														<!-- <img src="images/pic09.jpg" alt="" /> --></a>
-													<header>
-														<h3>Aptent veroeros et aliquam</h3>
-														<span class="byline">Posted 45 minutes ago</span>
-													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit  adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
-													<footer class="actions">
-														<a href="#" class="button fa fa-file-text">Continue Reading</a>
-														<a href="#" class="button alt fa fa-comment">33 comments</a>
-													</footer>
-												</section>
-											</div>
+											<% @rss.each do |rss| %>
+												<div class="6u">
+													<section class="box">
+														<a href="#" class="image image-full">
+															<%= image_tag('pic08.jpg')%>
+															<!-- <img src="images/pic08.jpg" alt="" /> --></a>
+														<header>
+															<h3><%=rss.title%></h3>
+															<span class="byline"><%=rss.pubDate%></span>
+														</header>
+														<p><%=rss.description%></p>
+														<footer class="actions">
+															<%= link_to 'Continue Reading',rss.link,:class=>"button alt fa fa-text",:target=>'_blank'%>
+															<%= link_to 'Comments',rss.comments,:class=>"button alt fa fa-comment",:target=>'_blank'%>
+														</footer>
+													</section>
+											  </div>
+											<%end%>
 										</div>
 									</div>
 								</section>
