refs to changes for taggable

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1157,3 +1157,12 @@
 			margin: 0;
 		}
 		
+/****************************************************************************/
+
+
+	#description
+	{
+		display:block;
+		width:343px;
+		height:75px;
+	}
