--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -77,28 +77,28 @@
 											<div class="4u">
 												<section class="box">
 													<a href="http://facebook.com/DreametryDoodle" class="image image-full">
-														<%= image_tag("pic02.jpg") %>
+														<%= image_tag @resume_template.main_image.url(:medium),:width=>'373',:height=>'260'%>
 														<!-- <img src="/assets/pic02.jpg" alt="" /> --></a>
 													<header>
 														<h3>Resume Templates</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p id='description'><%=@resume_template.short_description%></p>
 													<footer>
-														<a href="#" class="button alt">Find out more</a>
+														<a href="/templates" class="button alt">Find out more</a>
 													</footer>
 												</section>
 											</div>
 											<div class="4u">
 												<section class="box">
 													<a href="http://facebook.com/DreametryDoodle" class="image image-full">
-														<%= image_tag("pic03.jpg") %>
+														<%= image_tag @best_template.main_image.url(:medium),:width=>'373',:height=>'260'%>
 														<!-- <img src="/assets/pic03.jpg" alt="" /> --></a>
 													<header>
 														<h3>Best Sellers</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p id='description'><%=@best_template.short_description%></p>
 													<footer>
-														<a href="#" class="button alt">Find out more</a>
+														<a href="/templates?type=bs" class="button alt">Find out more</a>
 													</footer>
 												</section>
 											</div>
